<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.web_appdev.arduinobluetoothremote.MainMenu">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/choose_mode"
            android:textSize="50sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/pickupBot"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="50dp"
            android:background="@drawable/robotarm"
            android:contentDescription="@string/button_for_pick_up_bot" />

        <ImageButton
            android:id="@+id/battleBot"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="50dp"
            android:background="@drawable/battlebot"
            android:contentDescription="@string/button_for_battle_bot" />
    </LinearLayout>


</LinearLayout>
